Adjusts Cassandra image to work with JRE 11 and preps for Cassandra 4 (#3318)
This adds some workarounds for Cassandra when used on JRE 11, allowing
us a single base image in this repo (note zipkin-dependencies still
uses JRE 8 until Elasticsearch updates their spark support).

A single base image helps us as we don't need to download a couple
hundred meg only for one storage option. This also carves in Cassandra
4 support based on 4.0.0-beta-3 which passes almost all tests, but
deserves to wait until the next beta before we formalize in any way.